[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/traps/Falling Platforms/On (32x10).png" type="Texture" id=1]
[ext_resource path="res://assets/traps/Falling Platforms/Off.png" type="Texture" id=2]
[ext_resource path="res://scripts/traps/falling_platform.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 10 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 10 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 10 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 10 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "on",
"speed": 20.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "off",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 5.33333 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 8.66667 )

[node name="falling_platform" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "on"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.58946e-07 )
shape = SubResource( 6 )

[node name="player_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_checker"]
position = Vector2( 0, -3.33333 )
shape = SubResource( 7 )

[node name="fall_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="player_checker" to="." method="_on_player_checker_body_entered"]
[connection signal="timeout" from="fall_timer" to="." method="_on_fall_timer_timeout"]
